# gtest-demo

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yml
main/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt  example.cpp  example.h
test/: CMakeLists.txt  example_test.cpp
